--- a/css/stylepreguntas.css
+++ b/css/stylepreguntas.css
@@ -1,10 +1,27 @@
+*{
+    transition: all 0.25s;}
 body{
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-image: url(../images/imagen\ del\ body\ de\ preguntas.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-#encabezado{
-    
+#pregunta{
+    width: 80vw;
+    background: #ECF0F1 ;
+    margin: 10px;
+    padding: 10px;
+}
+
+.opcion{
+    width: 70vw;
+    background: #ECF0F1 ;
+    margin: 10px;
+    padding: 10px;
 }
